[tool.poetry]
name = "my-calendar"
version = "0.1.0"
description = ""
authors = ["Gysborn <forparty@gmail.com>"]
readme = "README.md"
packages = [{include = "my_calendar"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
